<resources>
    <string name="app_name">EvenQ</string>
    <string name="login">Log in</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="events">Events</string>
    <string name="tickets">Tickets</string>
    <string name="my_account">My Account</string>
    <string name="title_text">Title:</string>
    <string name="description_text">Description:</string>
    <string name="date_text">Date:</string>
    <string name="ticket_price_text">Ticket price:</string>
    <string name="location_text">Location:</string>
    <string name="hint_message">Start typing...</string>
    <string name="ticket_scanner">Ticket Scanner</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_event_maps">EventMapsActivity</string>
    <string name="venue">Venue</string>
    <string name="scan_tickets">Scan tickets</string>
    <string name="chat">Chat</string>
    <string name="account_details">Account details</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="refferal_code">Refferal code:</string>
    <string name="membership">Membership:</string>
    <string name="valid">Valid</string>
    <string name="expired">Expired</string>
    <string name="log_out">Log out</string>
    <string name="no_available_tickets">No available tickets</string>
</resources>