<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="8dp"
    tools:context=".EventActivity">

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_text"
        android:theme="@style/HeadlineMediumNLv1Left"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvEventTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:textStyle="normal"
        android:theme="@style/HeadlineMediumNLv1Left"
        app:layout_constraintStart_toEndOf="@id/tvTitle"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Event title" />

    <TextView
        android:id="@+id/tvDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/description_text"
        android:theme="@style/HeadlineMediumNLv1Left"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvTitle" />

    <TextView
        android:id="@+id/tvEventDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:textStyle="normal"
        android:theme="@style/HeadlineMediumNLv1Left"
        app:layout_constraintStart_toEndOf="@id/tvDescription"
        app:layout_constraintTop_toBottomOf="@id/tvTitle"
        tools:text="Event description" />

    <TextView
        android:id="@+id/tvDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/date_text"
        android:theme="@style/HeadlineMediumNLv1Left"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvDescription" />

    <TextView
        android:id="@+id/tvEventDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:textStyle="normal"
        android:theme="@style/HeadlineMediumNLv1Left"
        app:layout_constraintStart_toEndOf="@id/tvDate"
        app:layout_constraintTop_toBottomOf="@id/tvDescription"
        tools:text="Event date" />

    <TextView
        android:id="@+id/tvTicketPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ticket_price_text"
        android:theme="@style/HeadlineMediumNLv1Left"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvDate" />

    <TextView
        android:id="@+id/tvEventTicketPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:textStyle="normal"
        android:theme="@style/HeadlineMediumNLv1Left"
        app:layout_constraintStart_toEndOf="@id/tvTicketPrice"
        app:layout_constraintTop_toBottomOf="@id/tvDate"
        tools:text="Event price" />

    <TextView
        android:id="@+id/tvLocation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/location_text"
        android:theme="@style/HeadlineMediumNLv1Left"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvTicketPrice" />

    <TextView
        android:id="@+id/tvEventLocation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:textStyle="normal"
        android:theme="@style/HeadlineMediumNLv1Left"
        app:layout_constraintStart_toEndOf="@id/tvLocation"
        app:layout_constraintTop_toBottomOf="@id/tvTicketPrice"
        tools:text="Event location" />


</androidx.constraintlayout.widget.ConstraintLayout>